syntax = "proto3";

option csharp_namespace = "Automata.Devices.GrpcServices";

package automata.devices.grpcServices;

import "Core/CoreCommon/src/Core.proto";
import "google/protobuf/empty.proto";

message StateChangeRequest {
  string ControllerId = 1;
  string DeviceId = 2;
  automata.grpcServices.ResourceRecord ControlRequest = 3; 
}

service DeviceServices {
  rpc RequestStateChange (StateChangeRequest) returns (google.protobuf.Empty) { }
}